[workspace]
members = [
    "zlang-cli",
    "zlang-vm",
    "zlang-bytecode"
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
chacha20poly1305 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.21"
